# cspade-utilities

./: .gitignore  CMakeLists.txt  Makefile  StringArgvParser.cc  StringArgvParser.h  data.conf  data.data  data.idx  data.tpose  data.txt  exttpose.cc  funcs.h  getconf.cc  main.cc  makebin.cc  run.sh  utils.cc  utils.h  wrappers.cc  wrappers.h
correct/: exttpose  getconf  makebin  spade  summary.out
exttpose/: calcdb.cc  calcdb.h  exttpose.cc
getconf/: calcdb.cc  calcdb.h  getconf.cc
makebin/: makebin.cc
spade/: ArraySpade.cc  ArraySpade.h  Database.cc  Database.h  Eqclass.cc  HashTable.cc  Itemset.cc  Lists.cc  extl2.cc  partition.cc  sequence.cc
